// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no file diffs with --check + formatted file 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
Checking formatting...
formatted.jsAll matched files use Prettier code style!

=================================== (write) ====================================
[]
`;

exports[`no file diffs with --check + formatted file 2`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
Checking formatting...
All matched files use Prettier code style!

=================================== (write) ====================================
[]
`;

exports[`no file diffs with --list-different + formatted file 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
formatted.js
=================================== (write) ====================================
[]
`;

exports[`no file diffs with --list-different + formatted file 2`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================

=================================== (write) ====================================
[]
`;

exports[`output with --check + unformatted differs when piped 1`] = `
=================================== (stderr) ===================================
[warn] unformatted.js
[warn] Code style issues fixed in the above file(s).

=================================== (stdout) ===================================
Checking formatting...
unformatted.js
=================================== (write) ====================================
[{"filename":"unformatted.js","content":"var x = 1;\\n"}]
`;

exports[`output with --check + unformatted differs when piped 2`] = `
=================================== (stderr) ===================================
[warn] unformatted.js
[warn] Code style issues fixed in the above file(s).

=================================== (stdout) ===================================
Checking formatting...

=================================== (write) ====================================
[{"filename":"unformatted.js","content":"var x = 1;\\n"}]
`;

exports[`output with --list-different + unformatted differs when piped 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
unformatted.jsunformatted.js

=================================== (write) ====================================
[{"filename":"unformatted.js","content":"var x = 1;\\n"}]
`;

exports[`output with --list-different + unformatted differs when piped 2`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
unformatted.js

=================================== (write) ====================================
[{"filename":"unformatted.js","content":"var x = 1;\\n"}]
`;
